test/sema/unknown-identifier-in-generic-type-member-func.delta.output
unknown-identifier-in-generic-type-member-func.delta:6:9: error: unknown identifier 'x'
        x++
        ^
unknown-identifier-in-generic-type-member-func.delta:10:6: warning: unused declaration 'bar'
void bar(S<int> s) {
     ^
