test/sema/unknown-identifier-in-generic-type-member-func.delta
// RUN: %check_errors %not %delta -typecheck %s

struct S<T>: Copyable {
    void foo() {
        // CHECK: [[@LINE+1]]:9: error: unknown identifier 'x'
        x++
    }
}

void bar(S<int> s) {
    s.foo()
}
